--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <div id="qrcode"></div>
   </body>
 
+
   <script type="text/javascript">
-  new QRCode(document.getElementById("qrcode"), "http://jindo.dev.naver.com/collie");
+
+    new QRCode(document.getElementById("qrcode"), "http://wxpay/s/An4baqw");
   </script>
 
 
